Fixing spacing on timeline chat

--- a/web/app/themes/deeperdive/resources/assets/styles/scenes/expanded.scss
+++ b/web/app/themes/deeperdive/resources/assets/styles/scenes/expanded.scss
@@ -182,7 +182,7 @@
 }
 
 .chat-timeline {
-  position: fixed;
+  position: absolute;
   z-index: 100;
   bottom: 50px;
   width: calc(100% - 520px);
